--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!--
+ * @Author: LinRenJie xoxosos666@gmail.com
+ * @Date: 2024-01-22 22:48:08
+ * @Description: 
+-->
 <!doctype html>
 <html lang="en">
-  <head>
+  <head <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
