--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <!doctype html>
 <html lang="en">
-  <head <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">>
+  <head meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
