--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ace Admin</title>
+  <!-- <script type="text/javascript" src="https://connect.qq.com/qc_jssdk.js" data-appid="你的_APP_ID" data-redirecturi="https://baidu.com" charset="utf-8"></script> -->
 </head>
 <body>
 <div id="app"></div>
